static/css/main.css
*, html {
	font-family: Georgia, serif, auto;
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}

body {
	width: 100%;
	height: 100%;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

a {
	text-decoration: none;
}

input:focus,
select:focus,
textarea:focus,
button:focus {
	outline: none;
}

.index-head {
		position: absolute;
		width: 100%;
		background-color: rgb(230, 230, 230);
		border-bottom: 2px solid rgb(210, 210, 210);
	}
	.index-head-wrapper {
		width: 100%;
		height: 100px;
		position: fixed;
		top: 0px;
	}
	.index-head-title {
		color: rgb(255, 180, 50);
		text-align: left;
		font-size: 32px;
}

.main-start-box {
		width: 100%;
		max-width: 400px;
		height: 350px;
		margin: 0px auto;
		margin-top: 100px;
		border-radius: 3px;
		text-align: left;
		background-color: rgb(240, 240, 240);
		border: 2px solid rgb(230, 230, 230);
	}
	.main-start-box-text {
		font-size: 17px;
		margin: 20px 0px 10px 10px;
	}
	.main-start-box {
		font-size: 15px;
	}
	.main-start-box
		input:focus,
		select:focus,
		textarea:focus,
		button:focus {
		outline: none !important;
	}
	.main-start-box input {
		border: 2px solid rgb(230, 230, 230);
		width: 95%;
		margin: 10px 0px 5px 10px;
		margin-left: 10px;
		height: 32px;
		font-size: 17px;
	}
	.main-start-box button {
		font-size: 15px;
		filter: brightness(100%);
		padding-left: 15px;
		padding-right: 15px;
		width: auto;
		height: 28px;
		background-color: rgb(255, 200, 50);
		border: 2px solid rgb(230, 230, 230);
		margin-left: 10px;
	}
	.main-start-box button:active {
		border: 2px solid rgb(150, 150, 150);
	}
	.main-start-box button:hover {
		filter: brightness(95%);
	}
	.main-start-box-random button {
		background-color: rgb(220, 180, 240);
}

.chat-view {
		position: static;
		width: 100%;
		height: 100%;
		overflow: hidden;
		font-size: 18px !important;
	}
	.chat-view-content {
		margin: 0 auto;
		width: 100%;
		height: 100%;
		overflow: auto;
		margin-bottom: 80px;
	}
	.chat-view-input-wrapper {
		position: fixed;
		background-color: rgb(255, 180, 50);
		width: 100%;
		height: 40px;
		bottom: 0;
	}
	.chat-view-input-wrapper input {
		margin: 0px 0px 0px 12px;
		width: 100%;
		height: 40px;
		font-size: 18px;
	}
	.chat-view-bubble {
		width: auto;
		height: auto;
		border-radius: 5px;
		margin: 5px;
		word-wrap: break-word;
	}
	.chat-view-bubble-time {
		float: right;
		margin-right: 5px;
		color: rgb(190, 190, 190);
	}
	.chat-view-bubble-name {
		color: black;
		font-size: 15px;
	}
	.chat-view-bubble-own-name	{
		color: red;
}

.color-normal {
	color: rgb(160, 160, 160);
}
.color-alert {
	color: rgb(240, 50, 30);
}
.hide {
	display: hidden;
}

